@@ -3,28 +3,34 @@ package com.sparta.moit.domain.chat.dto;
 import com.sparta.moit.domain.chat.entity.Chat;
 import lombok.Builder;
 import lombok.Getter;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.SliceImpl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 public class ChatResponseDto {
 
     private final Long meetingId;
 
-    private final List<SingleChatResponseDto> chats;
+    private final Slice<SingleChatResponseDto> chats;
 
     @Builder
-    public ChatResponseDto(Long meetingId, List<SingleChatResponseDto> chats) {
+    public ChatResponseDto(Long meetingId, Slice<SingleChatResponseDto> chats) {
         this.meetingId = meetingId;
         this.chats = chats;
     }
 
-    public static ChatResponseDto fromEntity(List<Chat> chatEntityList, Long meetingId) {
-        List<SingleChatResponseDto> chats = chatEntityList.stream()
+    public static ChatResponseDto fromEntity(Slice<Chat> chatEntitySlice, Long meetingId) {
+        List<SingleChatResponseDto> chatDtos = chatEntitySlice.getContent().stream()
                 .map(SingleChatResponseDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
+
+        Slice<SingleChatResponseDto> chatDtoSlice = new SliceImpl<>(chatDtos, chatEntitySlice.getPageable(), chatEntitySlice.hasNext());
+
         return ChatResponseDto.builder()
                 .meetingId(meetingId)
-                .chats(chats).build();
+                .chats(chatDtoSlice).build();
     }
 }
